fixed the disqus comment not showing by changing config variable

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -287,3 +287,9 @@ $size: 3em;
     width: $size;
   }
 }
+
+/*Disqus thread*/
+
+div#disqus_thread {
+  margin-top:2em;
+}
